// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertyBagColumnRendererTest render with a combination of expanded and not expanded objects 1`] = `
<DocumentFragment>
  <div
    class="property-bag-container"
  >
    <div
      class="property-bag-div"
    >
      <span
        class="display-name"
      >
        display e: 
      </span>
      <div
        class="expanded-property-div"
      >
        <span
          class="display-name"
        >
          key1: 
        </span>
        value1
      </div>
      <div
        class="expanded-property-div"
      >
        <span
          class="display-name"
        >
          key2: 
        </span>
        value2
      </div>
    </div>
    <div
      class="property-bag-div"
    >
      <span
        class="display-name"
      >
        display b: 
      </span>
      -1
    </div>
  </div>
</DocumentFragment>
`;

exports[`PropertyBagColumnRendererTest render with expanded object 1`] = `
<DocumentFragment>
  <div
    class="property-bag-container"
  >
    <div
      class="property-bag-div"
    >
      <span
        class="display-name"
      >
        display e: 
      </span>
      <div
        class="expanded-property-div"
      >
        <span
          class="display-name"
        >
          key1: 
        </span>
        value1
      </div>
      <div
        class="expanded-property-div"
      >
        <span
          class="display-name"
        >
          key2: 
        </span>
        value2
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PropertyBagColumnRendererTest render with expanded object where some have null values 1`] = `
<DocumentFragment>
  <div
    class="property-bag-container"
  >
    <div
      class="property-bag-div"
    >
      <span
        class="display-name"
      >
        display null values: 
      </span>
      <div
        class="expanded-property-div"
      >
        <span
          class="display-name"
        >
          key1: 
        </span>
        value1
      </div>
      <div
        class="expanded-property-div"
      >
        <span
          class="display-name"
        >
          key2
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PropertyBagColumnRendererTest render, default value 1`] = `
<DocumentFragment>
  <div
    class="property-bag-container"
  >
    <div
      class="property-bag-div"
    >
      <span
        class="display-name"
      >
        display a: 
      </span>
      is a default value
    </div>
    <div
      class="property-bag-div"
    >
      <span
        class="display-name"
      >
        display b: 
      </span>
      -1
    </div>
  </div>
</DocumentFragment>
`;

exports[`PropertyBagColumnRendererTest render, empty object 1`] = `
<DocumentFragment>
  <div
    class="property-bag-container"
  >
    <div
      class="property-bag-div"
    >
      <span
        class="display-name"
      >
        display f: 
      </span>
      default
    </div>
  </div>
</DocumentFragment>
`;

exports[`PropertyBagColumnRendererTest render, one property from the bag 1`] = `
<DocumentFragment>
  <div
    class="property-bag-container"
  >
    <div
      class="property-bag-div"
    >
      <span
        class="display-name"
      >
        display name: 
      </span>
      string value
    </div>
  </div>
</DocumentFragment>
`;

exports[`PropertyBagColumnRendererTest render, property is null, no default value 1`] = `
<DocumentFragment>
  <div
    class="property-bag-container"
  />
</DocumentFragment>
`;

exports[`PropertyBagColumnRendererTest render, several properties from the bag 1`] = `
<DocumentFragment>
  <div
    class="property-bag-container"
  >
    <div
      class="property-bag-div"
    >
      <span
        class="display-name"
      >
        display a: 
      </span>
      string value
    </div>
    <div
      class="property-bag-div"
    >
      <span
        class="display-name"
      >
        display b: 
      </span>
      -1
    </div>
  </div>
</DocumentFragment>
`;
